--- a/lab7/css/style.css
+++ b/lab7/css/style.css
@@ -1,173 +1,175 @@
-﻿ul,
-ol {
+﻿﻿ul, ol {
   margin: 0;
-}
-
-a {
-  color: #1b242f;
-  text-decoration: none;
-}
-
-a:hover,
-a:focus {
-  color: #e74c3c;
-  text-decoration: underline;
-}
-
-li.fb a span {
+  }
+  
+  a {
+    color: #1B242F;
+    text-decoration: none;
+  }
+  
+  a:hover,
+  a:focus {
+    color: #E74C3C;
+    text-decoration: underline;
+  }
+  
+  li.fb a span {
   width: 30px;
   height: 30px;
-  background: url(../images/img-sprite.png) no-repeat -59px -1px #1287bf;
+  background: url(../images/img-sprite.png)no-repeat -59px -1px #1287BF;
   float: left;
-}
-
-ul.header_box li span {
+  }
+  
+  
+  
+  ul.header_box li span {
   color: #555;
-}
-
-.header_top {
+  }
+  
+  .header_top {
   float: right;
-}
-
-.logo {
+  }
+  
+  .logo {
   float: left;
-}
-
-ul.header_box li {
+  }
+  
+  ul.header_box li {
   display: inline-block;
-}
-
-ul.header_box {
+  }
+  
+  ul.header_box {
   list-style: none;
   padding: 0;
   float: left;
   margin: 3px 20px 0 0px;
-}
-
-ul.header_box li.mobile_left {
-  border-right: 1px solid #e1e1e1;
+  }
+  
+  ul.header_box li.mobile_left {
+  border-right: 1px solid #E1E1E1;
   padding-right: 15px;
-}
-
-ul.facebook {
+  }
+  
+  ul.facebook {
   list-style: none;
   padding: 0;
   float: left;
-}
-
-#banner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-#banner img {
-  width: 100%;
-}
-#bannertext {
-  position: absolute;
+  }
+  
+  #banner {
+    position: relative; 
+    width: 100%;
+    height: 100%;
+  }
+  #banner img { 
+    width: 100%;
+  }
+  #bannertext { 
+  position: absolute; 
   top: 10%;
   margin: auto;
-  width: 100%;
+  width: 100%; 
   height: 100%;
-  line-height: 100%;
-}
-
-i.icon1 {
+  line-height:100%;
+   }
+  
+  i.icon1 {
   width: 100px;
   height: 100px;
-  background: url(../images/img-sprite.png) no-repeat -95px 1px;
+  background: url(../images/img-sprite.png)no-repeat -95px 1px;
   display: inline-block;
-}
-
-i.icon2 {
+  }
+  
+  i.icon2 {
   width: 100px;
   height: 100px;
-  background: url(../images/img-sprite.png) no-repeat -199px 1px;
+  background: url(../images/img-sprite.png)no-repeat -199px 1px;
   display: inline-block;
-}
-
-i.icon3 {
+  }
+  
+  i.icon3 {
   width: 100px;
   height: 100px;
-  background: url(../images/img-sprite.png) no-repeat -95px -91px;
+  background: url(../images/img-sprite.png)no-repeat -95px -91px;
   display: inline-block;
-}
-
-.approach {
+  }
+  
+  .approach {
   background: #f3f3f3;
   padding: 1em 0 1em;
-}
-
-.header {
+  }
+  
+  
+  .header {
   background: #f0f2f4;
   border-bottom: 1px solid #e6e7e7;
-  height: 100%;
+  height:100%;
   margin: 5px;
-}
-
-ul.list1 {
+  }
+  
+  ul.list1 {
   list-style: none;
   margin: 15px;
   padding: 10px;
   box-shadow: 0 0 5px #aaa;
   position: relative;
   margin-bottom: 1em;
-  background: #fff;
+  background: #FFF;
   border-radius: 3px;
-}
-
-ul.list1 li.list1_img {
+  }
+  
+  ul.list1 li.list1_img {
   float: left;
   width: 36%;
-}
-
-ul.list1 li.list1_desc {
+  }
+  
+  ul.list1 li.list1_desc {
   float: left;
   width: 61%;
   padding: 1em;
   margin-left: 1em;
-}
-
-.work {
+  }
+  
+  .work {
   padding: 1em 0;
   background: #f35e59;
   color: #fff;
-}
-
-ul.list2 {
+  }
+  
+  ul.list2 {
   list-style: none;
   margin: 15px;
   padding: 10px;
   box-shadow: 0 0 5px #aaa;
   position: relative;
   margin-bottom: 1em;
-  background: #fff;
+  background: #FFF;
   border-radius: 3px;
-}
-
-ul.list2 li.list1_desc {
+  }
+  
+  ul.list2 li.list1_desc {
   float: left;
   width: 20%;
   padding: 1em;
   text-align: right;
-}
-
-ul.list2 li.list1_img {
+  }
+  
+  ul.list2 li.list1_img {
   float: right;
   width: 75%;
-}
-
-.footer {
+  }
+  
+  .footer {
   background: #2a2a2a;
   padding: 1em 0;
   color: #fff;
-}
-
-.social li a i.facebook {
+  }
+  
+  .social li a i.facebook {
   background-position: 5px -46px;
-}
-
-.social li a i {
+  }
+  
+  .social li a i {
   width: 50px;
   height: 50px;
   display: block;
@@ -177,26 +179,26 @@ ul.list2 li.list1_img {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -o-border-radius: 3px;
-}
-
-element.style {
-}
-.social li:first-child {
+  }
+  
+  element.style {
+  }
+  .social li:first-child {
   margin-left: 0;
-}
-.social li {
+  }
+  .social li {
   display: inline-block;
   margin-left: 12px;
-}
-
-.social li a i.twitter {
+  }
+  
+  .social li a i.twitter {
   background-position: -34px -46px;
-}
-
-.social li a i.google {
+  }
+  
+  .social li a i.google {
   background-position: -1px -87px;
-}
-
-.social li a i.linkedin {
+  }
+  
+  .social li a i.linkedin {
   background-position: -36px -85px;
-}
+  }
